--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,12 @@ environs = "9.5.*"
 uvicorn = "0.23.*"
 uvloop = "0.19.*"
 httptools = "0.6.*"
+httpx = "^0.25.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
+pytest = "^7.4.3"
+pytest-asyncio = "^0.21.1"
 
 [tool.ruff]
 line-length = 88
@@ -27,3 +30,7 @@ extend-select = ["E501"]
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "conf.settings"
+ENVIRONMENT = "test"
