--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,15 @@ environs = "9.5.*"
 uvicorn = "0.23.*"
 uvloop = "0.19.*"
 httptools = "0.6.*"
-httpx = "^0.25.1"
+httpx = "0.25.*"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.1.3"
 pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
+pytest-env = "^1.1.1"
+pytest-django = "^4.7.0"
+pytest-sugar = "^0.9.7"
 
 [tool.ruff]
 line-length = 88
@@ -33,4 +36,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 DJANGO_SETTINGS_MODULE = "conf.settings"
+addopts = "-s -v --no-migrations --durations=5"
+markers = ["unit", "integration", "e2e"]
+asyncio_mode = "auto"
+
+[tool.pytest_env]
 ENVIRONMENT = "test"
