--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,58 +1,81 @@
-[tool.poetry]
+[project]
 name = "fastpi-with-django-orm"
-version = "0.1.0"
+version = "0.0.1"
 description = "A PoC of using FastAPI alongside Django's ORM"
-authors = ["firminoneto11 <firminoneto11@hotmail.com>"]
 readme = "README.md"
+requires-python = ">=3.12, <3.13"
+dependencies = []
 
-[tool.poetry.dependencies]
-python = "3.12.*"
-django = "4.2.*"
-fastapi = "0.104.*"
-environs = "9.5.*"
-uvicorn = "0.23.*"
-uvloop = "0.19.*"
-httptools = "0.6.*"
-httpx = "0.25.*"
+[tool.uv]
+dev-dependencies = [
+    "bandit>=1.7.9, <1.8",
+    "coverage>=7.6.1, <7.7",
+    "pyright>=1.1.380, <1.2",
+    "pytest>=8.3.3, <8.4",
+    "pytest-asyncio>=0.24.0, <0.25",
+    "pytest-env>=1.1.4, <1.2",
+    "pytest-sugar>=1.0.0, <1.1",
+    "ruff>=0.6.5, <0.7",
+    "pre-commit>=3.8.0, <3.9",
+    "aiosqlite>=0.20.0, <0.21",
+]
 
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.1.3"
-pytest = "^7.4.3"
-pytest-env = "^1.1.1"
-pytest-django = "^4.7.0"
-pytest-sugar = "^0.9.7"
-coverage = "^7.3.2"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
+# Ruff Configs
 [tool.ruff]
 line-length = 88
-target-version = "py311"
+target-version = "py312"
 
 [tool.ruff.lint]
 extend-select = ["E501"]
 
+# Pytest configs
 [tool.pytest.ini_options]
-DJANGO_SETTINGS_MODULE = "conf.settings"
-addopts = "-s -v --no-migrations --durations=5"
-markers = ["unit", "integration", "e2e"]
+addopts = "-s -v --durations=10"
+markers = []
+asyncio_mode = "auto"
 
+# Pytest-Env configs
 [tool.pytest_env]
-ENVIRONMENT = "test"
+PROJECT_ENVIRONMENT = "testing"
 
+# Coverage configs
 [tool.coverage.run]
-omit = ["*test*", "manage.py", "*conftest.py"]
+branch = false
 data_file = ".coverage/coverage"
-branch = true
+omit = [
+    "test/*",
+    "tests/*",
+    "venv/*",
+    ".venv/*",
+    "*migrations/*",
+    "*cli/*",
+    "*conftest.py",
+    "manage.py",
+]
 
 [tool.coverage.report]
 skip_covered = true
 precision = 2
-fail_under = 80
-exclude_also = ["if TYPE_CHECKING:"]
+# fail_under = 80
+exclude_also = [
+    "if TYPE_CHECKING:",
+    "@abstractmethod",
+    "raise NotImplementedError",
+]
 
 [tool.coverage.html]
 directory = ".coverage/html-report"
 skip_covered = true
+
+# Pyright configs
+[tool.pyright]
+exclude = [".venv/", "venv/", "*/__pycache__/"]
+pythonVersion = "3.12"
+pythonPlatform = "Linux"
+venvPath = "./.venv"
+typeCheckingMode = "strict"
+reportUnusedImport = false
+
+# Bandit configs
+[tool.bandit]
+exclude_dirs = ["tests", "venv", ".venv"]
