build: added more deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "A PoC of using FastAPI alongside Django's ORM"
 readme = "README.md"
 requires-python = ">=3.12, <3.13"
 dependencies = [
+    "adrf>=0.1.7, <0.2",
     "django>=5.1.1, <5.2",
+    "djangorestframework>=3.15.2, <3.16",
     "environs>=11.0.0, <11.1",
     "fastapi>=0.114.2, <0.115",
     "httptools>=0.6.1, <0.7",
@@ -25,8 +27,8 @@ dev-dependencies = [
     "pytest-sugar>=1.0.0, <1.1",
     "ruff>=0.6.5, <0.7",
     "pre-commit>=3.8.0, <3.9",
-    "aiosqlite>=0.20.0, <0.21",
     "django-stubs>=5.0.4, <5.1",
+    "djangorestframework-stubs>=3.15.1, <3.16",
 ]
 
 # Ruff Configs
