--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "fastapi>=0.114.2, <0.115",
     "httptools>=0.6.1, <0.7",
     "httpx>=0.27.2, <0.28",
+    "uuid7>=0.1.0",
     "uvicorn>=0.30.6, <0.31",
     "uvloop>=0.20.0, <0.21",
 ]
