--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12, <3.13"
 dependencies = [
     "adrf>=0.1.7, <0.2",
+    "django-pgtrigger>=4.12.2",
     "django>=5.1.1, <5.2",
     "djangorestframework>=3.15.2, <3.16",
     "environs>=11.0.0, <11.1",
